adding background gradient to page

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
 	padding: 0 10px;
 	font: 18px/1.5 -apple-system, BlinkMacSystemFont, "avenir next",avenir, "Segoe UI", "lucida grande", "helvetica neue", helvetica, "Fira Sans",roboto, noto, "Droid Sans", cantarell, oxygen, ubuntu, "franklin gothic medium", "century gothic", "Liberation Sans",
 	sans-serif;
+
+	background: linear-gradient(135deg, #f3f8fd, #c8ddfb 55%, #e0cfe8);
+	min-height: 100vh;
 }
 
 h1, h2, h3 {
