--- a/style.css
+++ b/style.css
@@ -1,43 +1,52 @@
 /* General formatting */
 body {
-	padding: 0 10px;
+	margin: 0;
+	padding: 0;
 	font: 18px/1.5 -apple-system, BlinkMacSystemFont, "avenir next",avenir, "Segoe UI", "lucida grande", "helvetica neue", helvetica, "Fira Sans",roboto, noto, "Droid Sans", cantarell, oxygen, ubuntu, "franklin gothic medium", "century gothic", "Liberation Sans",
 	sans-serif;
 
 	background: linear-gradient(135deg, #f3f8fd, #c8ddfb 55%, #e0cfe8);
 	min-height: 100vh;
 	scroll-behavior: smooth;
+	position:relative;
 }
 
 h1, h2, h3 {
-	line-height: 1.2
+	line-height: 1.2;
 	padding: 10px;
 }
 
+.nav_container {
+	position:relative;
+  }
+
 nav {
 	display: flex;
-	justify-content: flex-end;
 	position: sticky;
-	top: 0;
-	z-index: 10;
+	float: right; 
+	margin-right: 45px;
 	
   }
 nav ul{
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	flex-direction: column;
+	align-items: space-between;
 	list-style-type: none;
+	gap: 15px;
 }
 
 nav li{
+	background: rgb(109, 46, 109);
+	border-radius: 5px;
 	margin: 0 3px;
+	text-align: center;
 }
 
 nav a{
 	text-decoration: none;
-	color: rgb(21, 38, 80);
+	color: white;
 
-	background-color: rgba(151, 151, 212, 0.3); 
+
 	border-radius: 10px; 
 	padding: 5px 6px;
 	margin: 5px; 
@@ -47,13 +56,21 @@ nav a{
 .content-column {
 	max-width: 1050px;
 	margin: 0px auto;
-	padding-top: 10px;
 }
 
+.input-menus {
+	display: flex;
+	gap:200px;
+}
+
+#legend {
+	text-align: center
+}
 /* But your visualization should be full-width and full-height */
 .vis-holder {
   width: 100%;
   height: 100%;
+  margin-left:100px;
 }
 
 #vis-svg {
@@ -70,7 +87,7 @@ nav a{
 
 /* Fork on GitHub ribbon via https://codepo8.github.io/css-fork-on-github-ribbon/# */  
 #forkongithub a{
-	background:rgb(205, 129, 195);
+	background:rgb(109, 46, 109);
 	color:#fff;
 	text-decoration:none;
 	font-family:arial,sans-serif;
