--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ c a::after{
 
 /* calendar styles */
 #calendar {
-    background-color: #f9f9f9;
+    background-color: white;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     padding: 20px;
