Changed hovering css for line filter

--- a/style.css
+++ b/style.css
@@ -330,10 +330,9 @@ c a::after{
     background-color: rgb(109, 46, 109);
     color: #fff;
 }
-/* .line-cell:hover, .line-cell.all-lines:hover {
-	background-color: rgb(237, 214, 237) !important;
-	color: black;
-} */
+.line-cell:hover, .line-cell.all-lines:hover {
+	background-color: rgb(237, 214, 237);
+}
 
 .filter-reset-button {
     background-color: rgb(109, 46, 109);
