changed selection style, updated calendar-scatterplot brushing/linking to allow for multiple year/month selections, altered/simplified selection update mechanism, modified cal.js to treat years more similarly to months by not storing an All Years string in the selected years array

--- a/style.css
+++ b/style.css
@@ -389,13 +389,13 @@ c a::after{
 
 /**scatterplot styles*/
 circle.selected {
-	fill: pink;
-	stroke: red;
+	fill: yellow;
+	stroke: black;
+	size:2px
+	opacity: 1;
   }
 
-  circle.filtered {
-	opacity: 5;
-  }
+
 
   circle.unfiltered {
 	opacity: 0;
