Revert "Pulling Recent Changes "

--- a/style.css
+++ b/style.css
@@ -389,18 +389,14 @@ c a::after{
 
 /**scatterplot styles*/
 circle.selected {
-	fill: yellow;
-	stroke: black;
-	size:2px
-	opacity: 1;
+	fill: pink;
+	stroke: red;
   }
 
-
+  circle.filtered {
+	opacity: 5;
+  }
 
   circle.unfiltered {
-	opacity: 0;
-  }
-
-  line.unfiltered{
 	opacity: 0;
   }
