--- a/style.css
+++ b/style.css
@@ -391,11 +391,9 @@ c a::after{
 circle.selected {
 	fill: yellow;
 	stroke: black;
-	size:2px
+	size:2px;
 	opacity: 1;
   }
-
-
 
   circle.unfiltered {
 	opacity: 0;
